required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.


Version 5.6.0-beta3 (2009-10-07):
---------------------------------

- Enable output of geometry in GML GetFeatureInfo if wms_geometries and
  wms_geom_type are specified (#2989)

- fix URN typo in mapwfs.c for urn:EPSG:geographicCRS:...

- don't apply scalefactor to label outlines (#3157)

- update namespaces and schema pointers (#2872)

- add RFC49 and RFC40 keywords to copy functions (#2865)

- minor fix to correct numberOfResults when maxfeatures is set in 
  mapfile (#2907)

- Fixed possible crash with WFS GetFeature when no projection is specified 
  at the map level (#3129)

- Fixed anchor point of vertically stacked bar graphs

- Fixed TEXT property that cannot be removed in the CLASS object. 
  PHP/Mapscript (#3063)

- Fixed use of minfeaturesize auto with curved labels (#3151)

- Fixed msRemoveHashTable function when 2 keys have the same hash (#3146)

- Fix raster thread deadlock condition on posix/linux (#3145)

- Do not route thread debug output through msDebug which requires locking.

- Fix WCS coverage metadata handling if size/resolution missing (#2683).

- Fix WCS crash with use of datasets that aren't physical files (#2901).

- Fix WCS failure with WCS 1.1 OGC URN (urn:ogc:def:crs:OGC::CRS84) (#3161).


Version 5.6.0-beta2 (2009-10-01):
---------------------------------

- Fixed a couple of issues with Oracle Spatial and single pass queries (#3069)

- Added layer.resultsGetShape() to PHP MapScript for use with queries (#3069)

- Fixed query maps under the new single pass query process (#3069)

- WFS Client seg fault (OGR layer not opened) (#3136)

- Reduce use of sqrt() calls when determining distances (#3134)
