@@ -15,6 +15,8 @@ For a complete change history, please see the Subversion log comments.
 Version 5.6.0-beta3 (2009-10-07):
 ---------------------------------
 
+- Fixed label placement using ANGLE AUTO are not always positioned correctly (#3160)
+
 - Enable output of geometry in GML GetFeatureInfo if wms_geometries and
   wms_geom_type are specified (#2989)
 
